--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "express": "^4.17.1",
     "jade": "^1.11.0",
     "morgan": "^1.10.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.5",
     "serve-favicon": "^2.5.0"
   }
 }
