--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "sequelize": "^6.6.5",
     "serve-favicon": "^2.5.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0"
   }
 }
