--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "debug": "node --inspect=0 server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "express"
+  ],
+  "author": "kamilnaja",
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.5",
